batch calculate matchStats
