# src/modules/matches/match.route.js
@@ -1,13 +1,20 @@
-const { Router } = require('express');
-
-const router = Router();
-
+const express = require('express');
+const router = express.Router();
 const matchController = require('./match.controller');
+const matchStatsController = require('./stats/matchStats.controller');
+const matchEventRoutes = require('./events/matchEvent.routes');
 
-router.post('/', matchController.createHandler);
 router.get('/', matchController.getHandler);
-router.get('/:_id', matchController.getOneHandler);
-router.put('/:_id', matchController.updateHandler);
-router.delete('/:_id', matchController.deleteHandler);
+router.post('/', matchController.createHandler);
+
+router.post('/stats/batchCalculate', matchController.batchCalculateStatsHandler);
+router.get('/:matchId/stats', matchStatsController.getMatchStats);
+router.post('/:matchId/stats/update', matchStatsController.updateMatchStats);
+
+router.use('/:matchId/events', matchEventRoutes);
+
+router.get('/:id', matchController.getOneHandler);
+router.put('/:id', matchController.updateHandler);
+router.delete('/:id', matchController.deleteHandler);
 
 module.exports = router;
